<resources>
    <string name="app_name">M2P</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="available_balance">Available Balance</string>
    <string name="top_up">Top up</string>
    <string name="transfer">Transfer</string>
    <string name="request">Request</string>
    <string name="history">History</string>
    <string name="payment_list">Payment List</string>
    <string name="promo_discount"><![CDATA[Promo & Discount]]></string>
    <string name="see_more">See more</string>
    <string name="send_money">Send Money</string>
    <string name="receipt">Receipt</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="date_time"><![CDATA[Date & time]]></string>
    <string name="no_ref">No. Ref</string>
    <string name="see_detail">See Detail</string>
    <string name="done">Done</string>
    <string name="contacts">Contacts</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="money">Money</string>
    <string name="savings">Savings</string>
    <string name="settings">Settings</string>
    <string name="transfer_successful">Transfer Successful</string>
    <string name="your_money_has_been_transferred_successfully">Your money has been transferred\n successfully!</string>
</resources>