<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_clr"
    tools:context=".ui.ReceiptFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".07" />

    <TextView
        android:id="@+id/receiptTitle"
        style="@style/TitleText.MidLarge.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/p_h_text"
        android:text="@string/receipt"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backBtn" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/shareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".07" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receiptTitle"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/messageParent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintHeight_percent=".4"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/statusImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:src="@drawable/outline_account_balance_wallet_24" />

                <TextView
                    android:id="@+id/statusTxt"
                    style="@style/TitleText.MidLarge.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    tools:text="Benedict Cumberbatch" />

                <TextView
                    android:id="@+id/statusDesc"
                    style="@style/TitleText.Fade.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="10dp"
                    tools:text="Benedict Cumberbatch" />

            </LinearLayout>


            <View
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/messageParent"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_fade_clr" />

            <TextView
                android:id="@+id/amtTitle"
                style="@style/TitleText.Fade.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/transfer_amount"
                android:layout_marginTop="26dp"
                app:layout_constraintBottom_toTopOf="@id/userCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/messageParent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/amtTxt"
                style="@style/TitleText.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/amtTitle"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="$1500" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/userCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@id/dateTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amtTitle"
                app:layout_constraintWidth_percent=".85">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/profileImg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/outline_account_balance_wallet_24" />

                    <TextView
                        android:id="@+id/userName"
                        style="@style/TitleText.Black"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@id/profileImg"
                        app:layout_constraintTop_toTopOf="@id/profileImg"
                        tools:text="Benedict Cumberbatch" />

                    <TextView
                        android:id="@+id/bankNo"
                        style="@style/TitleText.Fade.Black"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:layout_constraintStart_toStartOf="@id/userName"
                        app:layout_constraintTop_toBottomOf="@id/userName"
                        tools:text="Bank - 0070 8822 1102 2255" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/dateTitle"
                style="@style/TitleText.Fade.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/date_time"
                app:layout_constraintBottom_toTopOf="@id/refTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userCard" />

            <TextView
                android:id="@+id/dateTxt"
                style="@style/TitleText.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/dateTitle"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="$1500" />

            <TextView
                android:id="@+id/refTitle"
                style="@style/TitleText.Fade.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/no_ref"
                app:layout_constraintBottom_toTopOf="@id/seeMore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateTitle" />

            <TextView
                android:id="@+id/refTxt"
                style="@style/TitleText.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@id/refTitle"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="$1500" />


            <TextView
                android:id="@+id/seeMore"
                style="@style/TitleText.MidLarge.Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingVertical="25dp"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:text="@string/see_detail"
                android:background="@color/grey_bg"
                app:drawableEndCompat="@drawable/ic_down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/refTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:text="@string/done"
        android:textSize="@dimen/btn_txt"
        android:textStyle="bold"
        app:backgroundTint="@color/bg_clr"
        app:cornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardBg"
        app:layout_constraintWidth_percent=".9" />


</androidx.constraintlayout.widget.ConstraintLayout>